Updated the Content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2 class="name">Pravin Padalkar</h2>
       </div>
       <div class="technologies">
-        <h2>technologies i have worked with</h2>
+        <h2>Technologies i have worked with</h2>
         <div class="icons">
           <i class="fa-brands fa-2x fa-html5" title="HTML"></i>
           <i class="fa-brands fa-2x fa-css3" title="CSS"></i>
@@ -64,18 +64,18 @@
         <h2>Education</h2>
         <div class="btech">
           <i class="fa-solid fa-1x fa-graduation-cap"></i>
-          &nbsp;<span>Btech</span>&nbsp;<span>2020-2024</span> &nbsp;<span>9.29/10 CGPA</span>
-          <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+          &nbsp;<span class="degree"><b>Btech</b></span>&nbsp;<span class="grade"><b>9.29/10</b> CGPA</span>&nbsp;<span class="year">(2020-2024)</span> 
+          <p>I have completed my graduation from Vidyalankar institute of technology,Mumbai.</p>
         </div>
         <div class="twe-th">
-          <i class="fa-solid fa-1x fa-building-columns"></i> &nbsp;<span>12th</span>
-          &nbsp;<span>2020-2024</span> &nbsp;<span>86.62/100 %</span>
-          <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+          <i class="fa-solid fa-1x fa-graduation-cap"></i>
+          &nbsp;<span class="degree"><b>12th</b></span>&nbsp;<span class="grade"><b>86.62</b> %</span>&nbsp;<span class="year">(2018-2020)</span> 
+          <p>Swami Vivekanand junior college,Chembur(Bifocal-Electronics)</p>
         </div>
         <div class="ten-th">
-          <i class="fa-solid fa-1x fa-school"></i> &nbsp;<span>10th</span>
-          &nbsp;<span>2020-2024</span> &nbsp;<span>93.20/100 %</span>
-          <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+          <i class="fa-solid fa-1x fa-graduation-cap"></i>
+          &nbsp;<span class="degree"><b>10th</b></span>&nbsp;<span class="grade"><b>93.20</b> %</span>&nbsp;<span class="year">(2016-2020)</span> 
+          <p>Nutan Vidya Mandir,Mankhurd.</p>
         </div>
       </div>
     </main>
