Worked upon the Contact Page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <title>Contact Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+    integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <section class="container">
@@ -16,6 +19,30 @@
             <a href="contact.html">Contact</a>
           </div>
         </header>
+        <section class="contact-cards">
+          <div class="email-card flex-center">
+            <a href="mailto:pravinpadalkar78@gmail.com" class="email-content">
+              <i class="fa-solid fa-1x fa-envelope"></i> &nbsp;<span>pravinpadalkar78@gmail.com</span>
+            </a>
+          </div>
+          <div class="linkedin-card flex-center">
+            <i class="fa-brands fa-3x fa-linkedin"></i>
+          </div>
+          <div class="resume-card flex-center">
+            <div class="resume-content">
+              <h2>Resume</h2>
+              <a href="#"><i class="fas fa-1x fa-eye"></i> <span>preview</span></a>
+            </div>
+          </div>
+          <div class="github-card flex-center">
+            <div class="github-content">
+              <h2>Github Profile</h2>
+              <i class="fa-brands fa-3x fa-github"></i>
+              <p>Find more of my Repositories</p>
+            </div>
+          </div>
+        </section>
+        <!-- <form action="#"></form> -->
     </section>
 </body>
 </html>
