--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,9 @@
         </header>
         <main>
             <div class="project-container">
-                <div class="project-card">
-                    <img src="images/countries-api.png" alt="ImageWiz">
-                    <div class="project-info">
+                <div class="project-card ">
+                    <img src="images/countries-api.png" class="scale" alt="ImageWiz">
+                    <div class="project-info scale">
                         <h1>CountriesAPI</h1>
                         <span>nesciunt unde! Facere, asperiores odio in, quidem tempora perferendis molestias necessitatibus voluptatibus assumenda iusto obcaecati, labore cupiditate excepturi consequuntur maiores magnam. Libero repudiandae tempore obcaecati, quisquam maxime in sed perferendis ab, quod hic, dolor at!</span>
                         <div class="project-stack">
@@ -32,13 +32,13 @@
                             <span>API</span>
                         </div>
                     </div>
-                    <a href="https://countries-api-react-project.vercel.app" class="project-link">
+                    <a href="https://countries-api-react-project.vercel.app" class="project-link scale">
                         <i class="fa-duotone fa-2x fa-solid fa-link"></i>
                     </a>
                 </div>
                 <div class="project-card">
-                    <img src="images/imagewiz.png" alt="ImageWiz">
-                    <div class="project-info">
+                    <img class="scale"  src="images/imagewiz.png" alt="ImageWiz">
+                    <div class="project-info scale">
                         <h1>ImageWiz</h1>
                         <span>Web-ImageWiz is an individual Project. Basically it is a website in which we
                             can apply various filters like hue, contrast, opacity etc. to image and user can
@@ -50,13 +50,13 @@
                             <span>React</span>
                         </div>
                     </div>
-                    <a href="https://web-imagewiz.vercel.app/" class="project-link">
+                    <a href="https://web-imagewiz.vercel.app/" class="project-link scale">
                         <i class="fa-duotone fa-2x fa-solid fa-link"></i>
                     </a>
                 </div>
                 <div class="project-card">
-                    <img src="images/mess-wallah.png" alt="ImageWiz">
-                    <div class="project-info">
+                    <img src="images/mess-wallah.png " class="scale"  alt="ImageWiz">
+                    <div class="project-info scale">
                         <h1>MessWallah</h1>
                         <span>Mess-Wallah is a software solution designed to simplify and enhance the management of mess facilities in educational institution areas It provides features like booking a mess service, menu planning, andfeedback collection UI</span>
                         <div class="project-stack">
@@ -67,7 +67,7 @@
                             <span>Bootstrap</span>
                         </div>
                     </div>
-                    <a href="https://mess-wallah.vercel.app" class="project-link">
+                    <a href="https://mess-wallah.vercel.app" class="project-link scale">
                         <i class="fa-duotone fa-2x fa-solid fa-link"></i>
                     </a>
                 </div>
