Modified some content and links

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,10 @@
                     <img src="images/countries-api.png" class="scale" alt="ImageWiz">
                     <div class="project-info scale">
                         <h1>CountriesAPI</h1>
-                        <span>nesciunt unde! Facere, asperiores odio in, quidem tempora perferendis molestias necessitatibus voluptatibus assumenda iusto obcaecati, labore cupiditate excepturi consequuntur maiores magnam. Libero repudiandae tempore obcaecati, quisquam maxime in sed perferendis ab, quod hic, dolor at!</span>
+                        <span>This project showcases a responsive website fetching country data from a REST API
+                            using React.js and Tailwind CSS.Key features include search functionality, filtering by region, and a toggle for
+                            dark/light mode, ensuring a dynamic and user-friendly experience. Built as a
+                            Frontend Mentor challenge, it emphasizes interactive and modern UI design</span>
                         <div class="project-stack">
                             <span>Html</span>
                             <span>CSS</span>
