--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,19 @@
               <i class="fa-solid fa-1x fa-envelope"></i> &nbsp;<span>pravinpadalkar78@gmail.com</span>
             </a>
           </div>
-          <div class="linkedin-card flex-center">
+          <a href="https://www.linkedin.com/in/pravinpadalkar78/" class="linkedin-card flex-center">
             <i class="fa-brands fa-3x fa-linkedin"></i>
-          </div>
+          </a>
           <div class="resume-card flex-center">
             <div class="resume-content">
               <h2>Resume</h2>
-              <a href="#"><i class="fas fa-1x fa-eye"></i> <span>preview</span></a>
+              <a href="/images/Pravin_Padalkar_resume_03.pdf"><i class="fas fa-1x fa-eye"></i> &nbsp;<span>preview</span></a>
             </div>
           </div>
           <div class="github-card flex-center">
             <div class="github-content">
               <h2>Github Profile</h2>
-              <i class="fa-brands fa-3x fa-github"></i>
+              <a href="https://github.com/PravinPadalkar78"><i class="fa-brands fa-3x fa-github"></i></a>
               <p>Find more of my Repositories</p>
             </div>
           </div>
