--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
     <main class="grid">
-      <div class="intro">
+      <div class="intro scale">
         <h2>Who am I?</h2>
         <p>
           I am a passionate web developer, specializing in Frontend
@@ -35,17 +35,17 @@
         </p>
       </div>
 
-      <img class="quote-img" src="images/night.jpg" alt="" />
-      <div class="quote-text">
+      <img class="quote-img scale" src="images/night.jpg" alt="" />
+      <div class="quote-text scale">
         <h3>"The only way to do great work is to love what you do."</h3>
       </div>
-      <div class="role">
+      <div class="role scale">
         <h3>Frontend Developer & A Lifetime Student</h3>
       </div>
-      <div class="profile-container">
-        <img src="images/profile.png" alt="" />
+      <a href="https://github.com/PravinPadalkar78" class="profile-container scale">
+        <img src="images/profile.png"  alt="" />
         <h2 class="name">Pravin Padalkar</h2>
-      </div>
+      </a>
       <div class="technologies">
         <h2>Technologies i have worked with</h2>
         <div class="icons">
